Fix mistaken repo name

--- a/.readme.md
+++ b/.readme.md
@@ -13,7 +13,7 @@ Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using
 
 1. Add the following to `.zshrc`:
 
-`alias config='/usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME'`
+`alias config='/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME'`
 
 2. Clone the dotfiles repository
 
