Fix another mistaken name

--- a/.readme.md
+++ b/.readme.md
@@ -17,4 +17,4 @@ Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using
 
 2. Clone the dotfiles repository
 
-`git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.cfg`
+`git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
