Add some steps to config instructions

--- a/.readme.md
+++ b/.readme.md
@@ -18,3 +18,11 @@ Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using
 2. Clone the dotfiles repository
 
 `git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
+
+3. Pull the submodules
+
+`git submodule update --init --recursive`
+
+4. Source the zsh config or reload the environment
+
+`source ~/.zshrc`
