Update setup instructions

--- a/.readme.md
+++ b/.readme.md
@@ -11,18 +11,18 @@ Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using
 
 ### Setting up a new machine
 
-1. Add the following to `.zshrc`:
-
-`alias config='/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME'`
-
-2. Clone the dotfiles repository
+1. Clone the dotfiles repository
 
 `git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
+2. Check out the cloned bare branch.
+
+`/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout HEAD --force`
+
 3. Pull the submodules
 
-`git submodule update --init --recursive`
+`/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME submodule update --init --recursive`
 
-4. Source the zsh config or reload the environment
+5. Source the zsh config or reload the environment
 
 `source ~/.zshrc`
