--- a/.readme.md
+++ b/.readme.md
@@ -1,11 +1,14 @@
 # Dotfiles
 
-What I use:
+## About these dotfiles
+
+This repository represents the configuration (dotfiles) for the following CLI tools:
 
 - zsh (shell)
 - antigen (plugin manager for zsh)
+- vim (text editor)
 
-## Sync dotfiles config between unix-machines
+## Sync these dotfiles between unix-machines
 
 Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
 
