Expand readme with bit about vim

--- a/.readme.md
+++ b/.readme.md
@@ -5,8 +5,9 @@
 This repository represents the configuration (dotfiles) for the following CLI tools:
 
 - zsh (shell)
-- antigen (plugin manager for zsh)
+- antigen (zsh plugin manager)
 - vim (text editor)
+- Vundle (vim plugin manager)
 
 ## Sync these dotfiles between unix-machines
 
