--- a/.readme.md
+++ b/.readme.md
@@ -9,11 +9,28 @@ This repository represents the configuration (dotfiles) for the following CLI to
 - vim (text editor)
 - Vundle (vim plugin manager)
 
-## Sync these dotfiles between unix-machines
+This projects is to be used on unix-like systems such as Linux or macOS.
+
+## Author's note
+
+These configurations represent my personal preferences. I sync them between the various machines I use. MacOS and Arch Linux tend to be the main operating systems on those machines. If this setup is to your liking, feel free to use it as a starting point for your own config. I've tried to keep everything as generic and environment-agnostic as possible.
+
+## Setup requirements
+
+- Linux or macOS
+- Git (see: https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)
+
+## Set up on a new unix environment
 
 Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
 
-### Setting up a new machine
+Choose on of the setup options:
+
+### A) Setting up a new environment (script)
+
+To do: include an install script.
+
+### B) Setting up a new environment (manually)
 
 1. Clone the dotfiles repository
 
