Add Zsh as a requirment

--- a/.readme.md
+++ b/.readme.md
@@ -19,6 +19,7 @@ These configurations represent my personal preferences. I sync them between the 
 
 - Linux or macOS
 - Git (see: https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)
+- Zsh (see: https://wiki.archlinux.org/title/zsh)
 
 ## Set up on a new unix environment
 
