Change git SSH to HTTPS

--- a/.readme.md
+++ b/.readme.md
@@ -35,7 +35,7 @@ To do: include an install script.
 
 1. Clone the dotfiles repository
 
-`git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
+`git clone --bare https:github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
 2. Check out the cloned bare branch.
 
