Update install script and readme

--- a/.readme.md
+++ b/.readme.md
@@ -15,36 +15,49 @@ This projects is to be used on unix-like systems such as Linux or macOS.
 
 These configurations represent my personal preferences. I sync them between the various machines I use. MacOS and Arch Linux tend to be the main operating systems on those machines. If this setup is to your liking, feel free to use it as a starting point for your own config. I've tried to keep everything as generic and environment-agnostic as possible.
 
-## Setup requirements
+## Requirements
 
 - Linux or macOS
 - Git (see: https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)
 - Zsh (see: https://wiki.archlinux.org/title/zsh)
 
-## Set up on a new unix environment
+## Setup
 
 Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
 
-Choose on of the setup options:
+Choose one of the setup options:
 
-### A) Setting up a new environment (script)
+### A) Automatic setup with script
 
-To do: include an install script.
-
-### B) Setting up a new environment (manually)
-
-1. Clone the dotfiles repository
+1. Clone the repository:
 
 `git clone --bare https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
-2. Check out the cloned bare branch.
+2. Run the install script:
+
+`zsh ~/.scripts/install.zsh`
+
+### B) Manual setup
+
+1. Clone the repository:
+
+`git clone --bare https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
+
+2. Check out the cloned bare branch:
 
 `/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout HEAD --force`
 
-3. Pull the submodules
+3. Pull the submodules:
 
 `/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME submodule update --init --recursive`
 
-5. Source the zsh config or reload the environment
+5. Source the zsh config or reload the environment:
 
 `source ~/.zshrc`
+
+## Update
+
+Run the update script:
+
+`zsh ~/.scripts/update.zsh`
+
