--- a/.readme.md
+++ b/.readme.md
@@ -41,7 +41,7 @@ Choose one of the setup options:
 
 1. Clone the repository:
 
-`git clone --bare https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
+`git clone --bare --recursive https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
 2. Check out the cloned bare branch:
 
