--- a/.readme.md
+++ b/.readme.md
@@ -31,9 +31,13 @@ Choose one of the setup options:
 
 1. Clone the repository:
 
-`git clone --bare https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
+`git clone --bare https//:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
-2. Run the install script:
+2. Check out the cloned bare branch:
+
+`/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout HEAD --force`
+
+3. Run the install script:
 
 `zsh ~/.scripts/install.zsh`
 
