Update readme and install scripts

--- a/.readme.md
+++ b/.readme.md
@@ -25,39 +25,37 @@ These configurations represent my personal preferences. I sync them between the 
 
 Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
 
-Choose one of the setup options:
-
-### A) Automatic setup with script
+### Preparation
 
 1. Clone the repository:
 
-`git clone --bare https//:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
+`git clone --bare git@github.com:RubenSibon/.dotfiles.git $HOME/.dotfiles`
 
 2. Check out the cloned bare branch:
 
 `/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout HEAD --force`
 
-3. Run the install script:
+### Choose one of the setup options:
+
+#### A) Automatic setup with script
+
+Run the install script:
 
 `zsh ~/.scripts/install.zsh`
 
-### B) Manual setup
+#### B) Manual setup
 
-1. Clone the repository:
-
-`git clone --bare --recursive https:github.com/RubenSibon/.dotfiles.git $HOME/.dotfiles`
-
-2. Check out the cloned bare branch:
-
-`/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout HEAD --force`
-
-3. Pull the submodules:
+1. Pull the submodules:
 
 `/usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME submodule update --init --recursive`
 
-5. Source the zsh config or reload the environment:
+2. (optional) Install the vim plugins with Vundle:
 
-`source ~/.zshrc`
+`vim +PluginInstall +qall`
+
+3. Source the zsh config or reload the environment:
+
+`source ~/.zshrc && zsh`
 
 ## Update
 
