Update readme to reflect inclusion of NVM et al

--- a/.readme.md
+++ b/.readme.md
@@ -2,14 +2,22 @@
 
 ## About these dotfiles
 
-This repository represents the configuration (dotfiles) for the following CLI tools:
+This repository represents the [configuration (dotfiles)](https://en.wikipedia.org/wiki/Hidden_file_and_hidden_directory) for the following tools:
 
 - zsh (shell)
 - antigen (zsh plugin manager)
 - vim (text editor)
 - Vundle (vim plugin manager)
+- hyper.js (terminal emulator)
 
-This projects is to be used on unix-like systems such as Linux or macOS.
+This project also installs:
+
+- Node Version Manager (nvm)
+- Node (current)
+- Node (LTS)
+- Yarn
+
+This projects is to be used on [Unix-like](https://en.wikipedia.org/wiki/Unix-like) systems such as Linux or macOS.
 
 ## Author's note
 
@@ -20,10 +28,11 @@ These configurations represent my personal preferences. I sync them between the 
 - Linux or macOS
 - Git (see: https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)
 - Zsh (see: https://wiki.archlinux.org/title/zsh)
+- cURL (see: https://curl.se/)
 
 ## Setup
 
-Based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
+The git configration and setup methods are based on the following tutorial: [Simplest Way to Sync Dotfiles and Config Using Git by Victor Augusteo](https://medium.com/@augusteo/simplest-way-to-sync-dotfiles-and-config-using-git-14051af8703a)
 
 ### Preparation
 
@@ -56,6 +65,13 @@ Run the install script:
 3. Source the zsh config or reload the environment:
 
 `source ~/.zshrc && zsh`
+
+4. (optional) Install Node and Yarn using NVM:
+
+```
+nvm install node
+npm install --global yarn
+```
 
 ## Update
 
